# my-haskell-project

./: .envrc  LICENSE  README.md  README.txt  default.nix  flake.nix  my-haskell-project.cabal  shell.nix
app/: Acceleration.hs  AlarmClockCLI.hs  Algebra.hs  Main.hs  Speed.hs
src/: MathFunctions.hs  SpeedFunctions.hs
test/: SpeedFunctionsSpec.hs
