cabal-version:       2.4
-- cabal-version:       3.12

-- my package name
name:                my-haskell-project

version:             0.1.0.0
synopsis:            A simple Haskell project with CLI tools
description:         A Haskell project that includes CLI tools for algebra, speed, and acceleration calculations.
author:              NajibMalaysia
maintainer:          mnajib@gmail.com

license:             MIT
license-file:        LICENSE

category:            Development
build-type:          Simple

-- tests:               True

-- hs-source-dirs:      app, src

executable my-haskell-project
  main-is:             Main.hs
  hs-source-dirs:      app, src
  other-modules:       MathFunctions
  build-depends:       base >=4.7 && <5
  default-language:    Haskell2010

executable algebra
  main-is:             Algebra.hs
  -- main-is:             app/Algebra.hs
  hs-source-dirs:      app, src
  other-modules:       MathFunctions
  -- other-modules:       MathFunctions
  build-depends:       base >=4.7 && <5
  default-language:    Haskell2010

library
  -- exposed-modules:     SpeedAndAccelFunctions
  exposed-modules:     SpeedFunctions
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable speed
  hs-source-dirs:      app, src
  main-is:             Speed.hs
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

-- Run test with Cabal:
--   cabal test
-- Run test with Nix:
--   nix build .#speed-tests
test-suite speed-functions-test
  type:                exitcode-stdio-1.0
  -- main-is:             SpeedFunctionsSpec.hs
  main-is:             Spec.hs
  -- test-module:         SpeedFunctionsTest
  -- other-modules:       SpeedFunctions, AnotherModule, YetAnotherModule
  other-modules:       SpeedFunctionsSpec
                     -- , SpeedFunctionsSpec
  hs-source-dirs:      test
  -- , src
  build-depends:       base >= 4.7 && <5,
                       hspec >= 2.7 && <3,
                       my-haskell-project,
                       silently
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

executable acceleration
  hs-source-dirs:      app, src
  main-is:             Acceleration.hs
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

-- NOTES:
-- cabal build
-- cabal exec my-haskell-project
-- cabal exec algebra
